--- a/homework/Python_Marathon_HW_D05_Hard.ipynb
+++ b/homework/Python_Marathon_HW_D05_Hard.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
     "chinese_score = np.array([65,90,82,72,66,77])\n",
     "\n",
     "\n",
-    "dt = np.dtype ({'names': ['name','en_score', 'math_score', 'ch_score'], 'formats':['U8','int64', 'int64', 'int64']})\n",
+    "dt = np.dtype ({'names': ('name','en_score', 'math_score', 'ch_score'), 'formats':('U8','int64', 'int64', 'int64') })\n",
     "table01 = np.zeros (6, dtype=dt) # 有6筆資料, 先初始化, 用 dt 帶入 dtype\n",
     "print (table01)\n",
     "print (table01.dtype)\n",
@@ -71,13 +71,6 @@
     "\n",
     "print(table01)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
