--- a/homework/Pandas_HW_D17 用 pandas 撰寫樞紐分析表.ipynb
+++ b/homework/Pandas_HW_D17 用 pandas 撰寫樞紐分析表.ipynb
@@ -56,6 +56,53 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                               mean                         \n",
+      "                      chinese_score english_score math_score\n",
+      "sex  class student_id                                       \n",
+      "boy  1     1                     70            80         50\n",
+      "           3                     55            43         98\n",
+      "     2     2                     50            45         60\n",
+      "           4                     89            69         70\n",
+      "     3     11                    45            60         25\n",
+      "           12                    23            60         80\n",
+      "girl 1     5                     60            79         56\n",
+      "           7                     77            70         45\n",
+      "           9                     60            57         25\n",
+      "     2     6                     55            68         60\n",
+      "           8                     76            77         55\n",
+      "     3     10                    43            40         88\n",
+      "           13                    66            90         20\n",
+      "           14                    50            50         50\n",
+      "           15                    77            67         89\n"
+     ]
+    }
+   ],
+   "source": [
+    "#題目: 運用下列分數資料重新建構資料，將索引(index)依序改為sex、class、student_id，\n",
+    "#欄位依序改成chinese_score、english_score、math_score\n",
+    "\n",
+    "new = score_df.pivot_table(index=['sex','class','student_id'],\n",
+    "                           values=['chinese_score','english_score','math_score'],\n",
+    "                           aggfunc=['mean'])\n",
+    "print(new)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
