--- a/Practice, random/NBA_St. Curry.ipynb
+++ b/Practice, random/NBA_St. Curry.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -87,6 +87,90 @@
     "\n",
     "print('vs OPP AST \\n', AST)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    WorL    3P%   AST  STL   PTS\n",
+      "Opp                             \n",
+      "BRK    L  0.200  10.0  2.0  20.0\n",
+      "MIL    L  0.200   6.0  1.0  19.0\n",
+      "CHI    W  0.333   6.0  2.0  36.0\n",
+      "DET    W  0.556   6.0  2.0  31.0\n",
+      "POR    L  0.333   5.0  0.0  26.0\n",
+      "..   ...    ...   ...  ...   ...\n",
+      "BOS    L  0.579   3.0  0.0  47.0\n",
+      "PHI    W  0.588   5.0  0.0  49.0\n",
+      "WAS    L  0.143   8.0  1.0  18.0\n",
+      "DEN    W  0.444   3.0  0.0  32.0\n",
+      "SAC    W  0.500   4.0  1.0  37.0\n",
+      "\n",
+      "[61 rows x 5 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#SC_data\n",
+    "#重新把 Opp 定義成 index 的 data\n",
+    "SC_data_new = SC_data.set_index('Opp')\n",
+    "print(SC_data_new)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Opp   BRK  MIL    CHI    DET    POR  POR    SAC    LAC    LAC  TOR  ...  \\\n",
+      "WorL    L    L      W      W      L    W      W      L      W    W  ...   \n",
+      "3P%   0.2  0.2  0.333  0.556  0.333  0.5  0.417  0.167  0.643  0.1  ...   \n",
+      "AST    10    6      6      6      5    4      8      5     11    6  ...   \n",
+      "STL     2    1      2      2      0    0      0      1      3    0  ...   \n",
+      "PTS    20   19     36     31     26   62     30     13     38   11  ...   \n",
+      "\n",
+      "Opp     WAS    HOU    DEN    OKC    CLE    BOS    PHI    WAS    DEN  SAC  \n",
+      "WorL      L      W      W      W      W      L      W      L      W    W  \n",
+      "3P%   0.417  0.533  0.556  0.688  0.308  0.579  0.588  0.143  0.444  0.5  \n",
+      "AST       5      5      4      8      5      3      5      8      3    4  \n",
+      "STL       3      1      0      0      0      0      0      1      0    1  \n",
+      "PTS      32     38     53     42     33     47     49     18     32   37  \n",
+      "\n",
+      "[5 rows x 61 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#轉置\n",
+    "SC_data_new_T = SC_data_new.T\n",
+    "print(SC_data_new_T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#存成 excel 檔案\n",
+    "PTS.to_excel('PTS.xlsx', sheet_name='CURRY')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
